2020-07-14  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	*libpoke/libpoke.h (pk_make_struct_type): Prototype.
	(pk_struct_type): Likewise.
	(pk_allocate_struct_attrs): Likewise.
	(pk_struct_type_name): Likewise.
	(pk_struct_type_nfields): Likewise.
	(pk_struct_type_fname): Likewise.
	(pk_struct_type_set_fname): Likewise.
	(pk_struct_type_ftype): Likewise.
	(pk_struct_type_set_ftype): Likewise.
	*libpoke/pk-val.c (pk_make_struct_type): Define.
	(pk_struct_type): Likewise.
	(pk_allocate_struct_attrs): Likewise.
	(pk_struct_type_name): Likewise.
	(pk_struct_type_nfields): Likewise.
	(pk_struct_type_fname): Likewise.
	(pk_struct_type_set_fname): Likewise.
	(pk_struct_type_ftype): Likewise.
	(pk_struct_type_set_ftype): Likewise.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.mi-json/mi-json.c (pk_fatal): Use EXIT_FAILURE
	instead of hardcoded 1.
	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): Replace tabs
	with whitespaces.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Change jemarch for "the poke
	authors".
	* doc/poke.texi: Likewise.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): Fix logic.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_map): Fix subpassing on the map
	offset when it is on the left side of an assignment.

2020-07-13  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize): Move
	the file name normalization logic from here ...
	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): ... to here.

2020-07-13  Jose E. Marchesi  <jemarch@gnu.org>

	* .x-sc_bindtextdomain: New file.
	* testsuite/poke.mi-json/Makefile.am: New file.
	* testsuite/poke.mi-json/mi-json.c: Likewise.
	* testsuite/poke.mi-json/json.exp: Likewise.
	* configure.ac: AC_CONFIG testsuite/poke.mi-json/Makefile.
	* testsuite/Makefile.am (SUBDIRS): Add poke.mi-json.